--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -15,10 +15,6 @@ dd {
     vertical-align: top;
 }
 
-header, footer {
-    background: none repeat scroll 0 0 #A6C9E2;
-    color: #2E6E9E;
-    font-size: 20px;
-    padding: 5px 20px;
-    margin: 6px 0;
+.fa {
+    cursor: pointer;
 }
