Try to fix a bug

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -5,3 +5,11 @@
 tr[data-user-enabled="false"] {
     opacity: 0.3;
 }
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    margin-bottom: 60px !important;
+}
